Tablet improvemts and cleaning
Changes the About us UI ,clean the files and fixed the tablets mode navigations.

--- a/localization/languages/ar.json
+++ b/localization/languages/ar.json
@@ -59,7 +59,9 @@
         "title": "الرعاية",
         "description": "N تجسد الرعاية، مما يمثل التزام Marln بإنشاء مجتمع داعم للنساء في التكنولوجيا."
       },
-      "conclusion": "اليوم، نخدم عملاء في أكثر من 10 دول، مع أكثر من 50 نشر على مستوى المؤسسات وفريق من أكثر من 200 خبير. التزامنا بالابتكار والجودة وتمكين المرأة جعلنا شريكاً موثوقاً للشركات في جميع أنحاء العالم مع تعزيز قضية المرأة في التكنولوجيا."
+      "conclusion": "اليوم، نخدم عملاء في أكثر من 10 دول، مع أكثر من 50 نشر على مستوى المؤسسات وفريق من أكثر من 200 خبير. التزامنا بالابتكار والجودة وتمكين المرأة جعلنا شريكاً موثوقاً للشركات في جميع أنحاء العالم مع تعزيز قضية المرأة في التكنولوجيا.",
+      "cta": "انقر على أي حرف لاكتشاف معناه وتأثيره",
+      "close": "إغلاق"
     },
     "mission": {
       "title": "مهمتنا",
