--- a/localization/languages/ar.json
+++ b/localization/languages/ar.json
@@ -306,12 +306,12 @@
     "why": {
       "title": "لماذا تختار Marln؟",
       "subtitle": "نحن نؤمن بأن التميز التقني يجب أن يكون في متناول الجميع.",
-      "item1": { "title": "خبرة 10+ سنوات", "text": "عقد من الخبرة في تطوير البرامج والذكاء الاصطناعي والتحول الرقمي." },
+      "item1": { "title": "النتائج المثبتة", "text": "تم إطلاق أكثر من 70 علامة تجارية. تم نشر أكثر من 12 منتج. مدعوم بالنتائج، موثوق به من قبل الشركات الناشئة والمؤسسات والجهات الحكومية." },
       "item2": { "title": "نهج فردي", "text": "لا حلول عامة للجميع. كل عميل يحصل على حل مخصص، متوافق مع أهدافه وحجمه وثقافته." },
       "item3": { "title": "التكنولوجيا المتقدمة", "text": "نستخدم أحدث التقنيات والأدوات لضمان أن حلولك متطورة ومستقبلية." },
       "item4": { "title": "التكامل السلس", "text": "حلولنا تتكامل بسهولة مع أدواتك وتدفقات عملك الموجودة." },
-      "item5": { "title": "الامتثال", "text": "الامتثال جزء أساسي وليس لاحقاً." },
-      "item6": { "title": "النتائج المضمونة", "text": "نلتزم بتحقيق النتائج المرجوة وضمان رضا العملاء." }
+      "item5": { "title": "الامتثال", "text": "الامتثال مدمج في النظام وليس مضافاً عليه. من معالجة البيانات إلى النشر، نضمن أن أنظمتك تلبي المعايير التنظيمية والأخلاقية." },
+      "item6": { "title": "ميزات الذكاء الاصطناعي", "text": "الذكاء الاصطناعي الذي يعمل حيث يهم. سواء كان ذلك في أنظمة إدارة علاقات العملاء الذكية، أو تجربة المستخدم التكيفية، أو الرؤى في الوقت الفعلي، نحن ندمج الذكاء الاصطناعي للتأثير التجاري الحقيقي." }
     },
     "ai": {
       "title": "الذكاء الاصطناعي الذي يعمل حيث يهم",
